// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit SDK Context DepositSDKProvider renders and provides context values 1`] = `
<Text>
  API Key: test-provider-api-key
</Text>
`;

exports[`Deposit SDK Context useDepositSDK provides access to the NativeRampsSdk instance 1`] = `
<Text>
  Test Component
</Text>
`;
